========================
   beancount: CHANGES
========================
Note: This file contains only changes in the 'default' branch.


2018-02-12

  - Added a side-effects local variable saver utility for writing importers.

  - Fixed #212: Clarified error message for error in covering non-aggregate
    targets.

  - The Importer.extract() method now accepts a new parameters with the prior
    entries (or None, if not specified) as 'existing_entries'. It's free to use
    that as it pleases in order to flag entries as duplicates. The entries
    returned by Importer.extract() will be checked for __duplicate__ metadata
    and automatically inserted to that set if it is present. This allows the
    importer to return some duplicate entries for context - which will be
    rendered as such in the output, e.g. commented out - without having to
    necessarily throw them away.

    (The previous signature is still supported in order to avoid breaking
    everyone's importers.)


2018-01-31

  - Modified 'divert_expenses' plugin to store the original account name as
    metadata of diverted postings, so that they can be picked up by the
    extract_tagged script and brought back into the extract file.


2018-01-29

  - Created a new 'divert_expenses' plugin to redirect Expenses postings from
    transactions tagged with a particular tag to another account. See this
    thread for details:
    https://docs.google.com/drawings/d/18fTrrGlmz0jFbfcGGHTffbdRwbmST8r9_3O26Dd1Xww/edit?usp=sharing

  - Added account_types.is_account_type() function, which should be used above
    account_types.get_account_type().


2018-01-23

  - Removed the insertion of 'balance' metadata from the importer. We use it for
    inserting Balance entries, not attach as metadata.

  - Disabled Balance insertion CSV test;
    03d9a5c3b2784a6f6a05c12eaeb7776f0478a96d broke the insertion of Balance
    entries without inserting 'balance' metadata. We'll probably have to revert the