@@ -67,3 +67,15 @@ class TestSellGains(unittest.TestCase):
           Income:US:Company:ESPP:PnL   -80.00 USD
         """
         self.assertEqual([], list(map(type, errors)))
+
+    @loader.load_doc()
+    def test_sellgains_zero_price(self, entries, errors, options_map):
+        """
+        plugin "beancount.plugins.auto_accounts"
+        plugin "beancount.plugins.sellgains"
+
+        1999-07-31 * "Sell"
+          Assets:US:Broker:Options     -8000 VTI180216C200 {2.50 USD} @ 0 USD
+          Income:US:Company:ESPP:PnL    20000 USD
+        """
+        self.assertEqual([], list(map(type, errors)))
